# ESP32S3-1.85-ODB

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
components/esp32s3_obd/: CMakeLists.txt  gps_uart.c  gps_uart.h  newfeatures.h  newfeatures_env.c  obd_ble.c  obd_ble.h  obd_data_cache.c  obd_data_cache.h  remote_control.c  remote_control.h  ui.c  ui.h
components/esp32s3_obd/bsp_obd_dsp/i2c_driver/: I2C_Driver.c
components/esp32s3_obd/bsp_obd_dsp/lcd_driver/: ST77916.c  ST77916.h
components/esp32s3_obd/bsp_obd_dsp/pcf85063/: pcf85063.c  pcf85063.h
components/esp32s3_obd/bsp_obd_dsp/qmi8658/: qmi8658.c  qmi8658.h
components/esp32s3_obd/images/: imuStaticBg.c  pngLogoSkyGarage.c
components/esp32s3_obd/screens/: ui_ScreenPageBluetooth.c  ui_ScreenPageClock.c  ui_ScreenPageDashboard.c  ui_ScreenPageDetails.c  ui_ScreenPageIMU.c  ui_ScreenPageLogo.c  ui_ScreenPageUART.c
main/: CMakeLists.txt  app_main.c
tools/screenshots/: .gitignore  Makefile  capture_screens.c  esp_idf_stubs.c  generate_clock_static_bg.js  generate_imu_static_bg.js  lv_conf.h
tools/screenshots/stubs/: esp_err.h  esp_log.h  nvs.h
tools/screenshots/stubs/driver/: gpio.h  uart.h
